<resources>
    <string name="app_name">05122025SzymonSowula</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="IloscZnakow">Ile znaków?</string>
    <string name="dane_pracownika">Dane Pracownika</string>
    <string name="stanowisko">Stanowisko</string>
    <string name="generowanie_has_a">Generowanie Hasła</string>
    <string name="ma_e_i_wielkie_litery">Małe i wielkie litery</string>
    <string name="cyfry">Cyfry</string>
    <string name="znaki_specjalne">Znaki Specjalne</string>
    <string name="generuj_has_o">Generuj hasło</string>
    <string name="zatwierd">Zatwierdź</string>
</resources>